Revision history for Perl extension MooseX-Getopt

0.22
  * MooseX::Getopt
    - Split into MooseX::Getopt::Basic (without the G::L::Descriptive support)
    and MooseX::Getopt::GLD.

0.21 Thu. Aug 27 2009
  * MooseX::Getopt
    - Enable and document the argv parameter to the constructor.
    - Applied patches in RT43200 and RT43255
    - Applied patch from RT#47766 to not die if SimpleConfig cannot find the
      default config file name.

0.20 Wed. July 9 2009
	- fix MANIFEST.SKIP to avoid double-packaging

0.19 Wed. July 8 2009
  * MooseX::Getopt
    - Fix Getopt config spec for --configfile (t0m)
    - Add support for --usage/--help/--? (drew@drewtaylor.com)
    - Fix new_with_options to accept a hashref (DOUGDUDE@cpan.org)

  * Tests
    - Fix warning from tests with new Moose (t0m)
    - Fix tests on Win32 from RT#44909 (taro-nishino)

0.18 Thu. April 9 2009
  * MooseX::Getopt::Dashes
    - New module, for converting undercores to dashes (ilmari)

0.17 Wed. April 8 2009
  * MooseX::Getopt
    - work with latest Moose (hdp)

	~ unify module version numbers with dist version (hdp)

0.16 Tue. February 17 2009
	* t/
		- run pod tests only if RELEASE_TESTING env var is set

0.15 Sat. July 26 2008
	* MooseX::Getopt::OptionTypeMap
	  - Accept type constraint objects in the type mapping, not just names

0.14 Thurs. July 10, 2008
	* MooseX::Getopt::OptionTypeMap
	  - Change 'Float' which doesn't exist to 'Num' which does (perigrin)
	 
	* MooseX::Getopt
	  - removed the default handling with Getopt::Long::Descriptive
	    as it would override constructor parameters and that was 
	    bad. Besides, Moose will just DWIM on this anyway. (stevan)
	    - added test for it (stevan)

    * t/
      - fixed Getopt::Long::Descriptive specific tests to only run 
        if Getopt::Long::Descriptive is there (stevan)

0.13 Saturday, May 24, 2008
    * MooseX::Getopt
      - Commandline option shouldn't be required in the
        case that the given "required" attribute has